<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="gameResults"
            type="com.voitov.braincoach.domain.entity.GameResults" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:padding="8dp"
        tools:context=".presentation.GameFinishedFragment">

        <ImageView
            android:id="@+id/imageViewEmojiResult"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_margin="48dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toTopOf="@id/textViewRequiredRightAnswers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:smile="@{gameResults.winner}"
            app:srcCompat="@drawable/ic_smile" />

        <TextView
            android:id="@+id/textViewRequiredRightAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewCurrentRightAnswers"
            app:layout_constraintTop_toBottomOf="@id/imageViewEmojiResult"
            app:minCountOfRightAnswers="@{gameResults.levelSettings.minCountOfRightAnswers}"
            tools:text="@string/required_right_answers" />

        <TextView
            android:id="@+id/textViewCurrentRightAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:currentRightAnswers="@{gameResults.countOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@+id/textViewRequiredPercentageOfRightAnswers"
            app:layout_constraintTop_toBottomOf="@+id/textViewRequiredRightAnswers"
            tools:text="@string/current_right_answers" />

        <TextView
            android:id="@+id/textViewRequiredPercentageOfRightAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewCurrentPercentageOfRightAnswers"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurrentRightAnswers"
            app:minPercentageOfRightAnswers="@{gameResults.levelSettings.minPercentageOfRightAnswers}"
            tools:text="@string/required_percentage_of_right_answers" />

        <TextView
            android:id="@+id/textViewCurrentPercentageOfRightAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:currentPercentageOfRightAnswers="@{gameResults}"
            app:layout_constraintBottom_toTopOf="@id/buttonRetryGame"
            app:layout_constraintTop_toBottomOf="@+id/textViewRequiredPercentageOfRightAnswers"
            tools:text="@string/current_percentage_of_right_answers" />

        <Button
            android:id="@+id/buttonRetryGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>